kube/dev/load-balancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  labels:
    name: load-balancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: load-balancer
